--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "java.project.referencedLibraries": {
         "include": [
             "lib/**/*.jar",
-            "c:\\Users\\ravin\\Downloads\\jcalendar-tz-1.3.3-4.jar"
+            "c:\\Users\\ravin\\Downloads\\jcalendar-tz-1.3.3-4.jar",
+            "c:\\Users\\ravin\\Downloads\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar"
         ],
         "exclude": [
             "c:\\Users\\ravin\\Downloads\\jcalendar-tz-1.3.3-4.jar"
         ]
-    }
+    },
+    "java.debug.settings.onBuildFailureProceed": true
 }
